#ifndef __REC_SLOW_COMMANDEDITORS__
#define __REC_SLOW_COMMANDEDITORS__

#include "rec/base/base.h"

namespace rec {
namespace slow {

void clearKeyboardMappings();
void clearMidiMappings();
void keyboardMappings();
void midiMappings();

}  // namespace slow
}  // namespace rec

#endif  // __REC_SLOW_COMMANDEDITORS__
